# mth5_test_data

./: .gitignore  MANIFEST.in  README.md  README.rst  from_xml.mth5  pyproject.toml  setup.py
florida_xml_metadata_files/: FL001.a.electric.Ex.xml  FL001.a.electric.Ey.xml  FL001.a.magnetic.Hx.xml  FL001.a.magnetic.Hy.xml  FL001.a.magnetic.Hz.xml  FL001.a.xml  FL001.b.electric.Ex.xml  FL001.b.electric.Ey.xml  FL001.b.magnetic.Hx.xml  FL001.b.magnetic.Hy.xml  FL001.b.magnetic.Hz.xml  FL001.b.xml  FL002.a.electric.Ex.xml  FL002.a.electric.Ey.xml  FL002.a.magnetic.Hx.xml  FL002.a.magnetic.Hy.xml  FL002.a.magnetic.Hz.xml  FL002.a.xml  FL002.b.electric.Ex.xml  FL002.b.electric.Ey.xml  FL002.b.magnetic.Hx.xml  FL002.b.magnetic.Hy.xml  FL002.b.magnetic.Hz.xml  FL002.b.xml  FL002.xml  FL003.a.electric.Ex.xml  FL003.a.electric.Ey.xml  FL003.a.magnetic.Hx.xml  FL003.a.magnetic.Hy.xml  FL003.a.magnetic.Hz.xml  FL003.a.xml  FL003.b.electric.Ex.xml  FL003.b.electric.Ey.xml  FL003.b.magnetic.Hx.xml  FL003.b.magnetic.Hy.xml  FL003.b.magnetic.Hz.xml  FL003.b.xml  FL003.c.electric.Ex.xml  FL003.c.electric.Ey.xml  FL003.c.magnetic.Hx.xml  (+142 more)
metadata_files/: channel_example.xml  station_example.xml  survey.xml
mth5_test_data/: __init__.py  from_xml.mth5  util.py
mth5_test_data/MTML/: MTML_Magnetometer_Unit.xml  readme
mth5_test_data/calibration_files/: 2254.csv  3304.csv  4054.csv  MTX893CHOPON.txt
mth5_test_data/calibration_files/20210226/: README  email_maeva_20210226.txt
mth5_test_data/florida_xml_metadata_files/: FL001.a.electric.Ex.xml  FL001.a.electric.Ey.xml  FL001.a.magnetic.Hx.xml  FL001.a.magnetic.Hz.xml  FL001.b.electric.Ex.xml  FL001.b.magnetic.Hx.xml  FL001.b.magnetic.Hy.xml  FL001.b.xml  FL001.xml  FL002.a.magnetic.Hy.xml  FL002.a.xml  FL002.b.xml  FL002.xml  StationXML.xml  filters.xml
mth5_test_data/iris/: MTML_Electrode_Unit.xml  fdsn-station_2021-03-09T04_44_51.xml  readme
mth5_test_data/iris/xml/: ZU_20210212.xml
mth5_test_data/metadata_files/: electric_example.xml  magnetic_example.xml  run_example.xml  survey_example.xml
mth5_test_data/mth5/parkfield/: pkd_processing_config.json  readme
mth5_test_data/phoenix/sample_data/: example_rxcal.json
mth5_test_data/stationxml/: StationXML_REW09.xml
mth5_test_data/zen/: ms02_20160726_230536_1024_EX.Z3D
(+22 files in other folders)
